--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: iotools
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -9,11 +9,62 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  auto_route: ^10.0.1
+  lottie: ^3.3.1
+  fl_chart: ^0.70.2
+  gap: ^3.0.1
+  dio: ^5.8.0
+  json_annotation: ^4.9.0
+  flutter_bloc: ^9.1.0
+  get_it: ^8.0.3
+  flutter_secure_storage: ^9.2.4
+  cookie_jar: ^4.0.8
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  auto_route_generator: ^10.0.1
+  json_serializable: ^6.9.4
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/lottie/
+    - assets/images/
+
+  fonts:
+    - family: MTSCompact
+      fonts:
+        - asset: assets/fonts/MTSCompact-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/MTSCompact-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/MTSCompact-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/MTSCompact-Black.ttf
+          weight: 900
+
+    - family: MTSText
+      fonts:
+        - asset: assets/fonts/MTSText-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/MTSText-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/MTSText-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/MTSText-Black.ttf
+          weight: 900
+
+    - family: MTSWide
+      fonts:
+        - asset: assets/fonts/MTSWide-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/MTSWide-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/MTSWide-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/MTSWide-Black.ttf
+          weight: 900
