--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   cookie_jar: ^4.0.8
   jwt_decoder: ^2.0.1
+  talker_dio_logger: ^4.7.1
+  talker_flutter: ^4.7.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
